🔒 Remove DEPLOYMENT_GUIDE.md with API secrets from repository
• Remove docs/DEPLOYMENT_GUIDE.md from git tracking
• Add DEPLOYMENT_GUIDE.md to .gitignore
• File kept locally only for security
• Contains sensitive API keys that should not be public

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,9 @@ logs/
 *secret*
 .secrets/
 
+# Deployment guide with secrets (keep local only)
+docs/DEPLOYMENT_GUIDE.md
+
 # Google Cloud
 .gcloud/
 service-account-key.json
